Small refactor to fix bug of not centered text

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -20,7 +20,7 @@
     
 }
 
-.about-role{
+#about-role{
     color: #444444;
     font-family: 'Poppins', sans-serif;
     font-weight: 100;
